Adding Dev and Prod profiles.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-# Change default path
-server.servlet.context-path=/adhara-brows
+# Enable environment profiles.
+spring.profiles.active=dev
+
+# Application path for all profiles.
+server.servlet.context-path=/adhara-brows/api
