--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,9 @@
 # Profile Production environment properties
 
 # Application port.
-server.port=80
+server.port=8081
+
+# Database properties
+spring.datasource.url=jdbc:postgresql://172.19.0.2:5432/adharaStore
+spring.datasource.username=omju
+spring.datasource.password=omauri.Postgres0691
