--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.5.1</version>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
