--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,8 @@
 
 # Application port.
 server.port=8091
+
+# Database properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/adharaStore
+spring.datasource.username=omju
+spring.datasource.password=omauri.Postgres0691
