OMJU - Deleting datas.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,6 @@
 server.port=8091
 
 # Database properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/adharaStore
-spring.datasource.username=omju
-spring.datasource.password=omauri.Postgres0691
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
