--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,6 @@
 server.port=8081
 
 # Database properties
-spring.datasource.url=jdbc:postgresql://172.19.0.2:5432/adharaStore
-spring.datasource.username=omju
-spring.datasource.password=omauri.Postgres0691
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
